# vfhe-profiled

./: Cargo.toml
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  sk1  sk2
ttfhe/: Cargo.toml  README.md
ttfhe/src/: ggsw.rs  glwe.rs  lib.rs  lwe.rs  poly.rs  utils.rs
ttfhe/src/karatsuba/: asymmetric_karatsuba.rs  mod.rs  negacyclic_asymmetric_karatsuba.rs
